Bring back sponsor-level labels, and fix attendees on smaller screens

--- a/sass/_widgets.scss
+++ b/sass/_widgets.scss
@@ -31,7 +31,7 @@
 	input[type="submit"] {
 		border-radius: 0 3px 3px 0;
 	}
-	
+
 	@media ( max-width: 400px ) {
 		#subscribe-email input,
 		input[type="submit"] {
@@ -79,7 +79,7 @@
 		float: left;
 		width: 50%;
 	}
-	
+
 	@media (max-width: 825px ) {
 		.widget:nth-of-type(2),
 		.widget:nth-of-type(3) {
@@ -89,32 +89,37 @@
 			max-width: 500px;
 			width: 100%;
 		}
-	
+
 		.widget:nth-of-type(2) {
 			padding-bottom: 0
 		}
 	}
-	
+
 	@media ( max-width: 520px ) {
 		.widget:nth-of-type(n) { // Specificity hack
 			padding-left: 20px;
 			padding-right: 20px;
 		}
 	}
-	
+
 	.home & {
 		margin-top: -160px;
 
 		.widget:nth-of-type(1) {
 			margin-top: 60px;
 			height: 100px;
+
+			@media ( max-width: 500px ) {
+				margin-top: 20px;
+				height: 140px;
+			}
 		}
 	}
 }
 
 #before-content-widgets {
 	background: white;
-	
+
 	.widget {
 		margin: 0 auto;
 		padding-top: 50px;
@@ -143,11 +148,7 @@
 		margin-right: -10px;
 
 		.widget-title {
-			@include uppercase-serif;
-			@include font-size( 2.8 );
-			margin: 0 10px 40px;
-			text-align: center;
-			color: $blue;
+			display: none;
 		}
 
 		.sponsor-level {
@@ -155,7 +156,17 @@
 		}
 
 		.sponsor-level-title {
-			display: none;
+			margin: 0 10px 20px;
+			padding-top: 20px;
+			font-family: $font-slab;
+			@include uppercase-serif;
+			@include font-size( 2.8 );
+			text-align: center;
+			color: $blue;
+
+			&:after {
+				content: ' Sponsors';
+			}
 		}
 
 		.sponsor-logo {
@@ -176,15 +187,15 @@
 				transform: translate(-50%, -50%);
 				max-width: 80%;
 			}
-			
+
 			@media (max-width: 750px ) {
 				width: calc( 33.33333% - 20px );
 			}
-			
+
 			@media (max-width: 550px ) {
 				width: calc( 50% - 20px );
 			}
-			
+
 			@media (max-width: 350px ) {
 				width: calc( 100% - 20px );
 			}
@@ -194,7 +205,7 @@
 
 #footer-widgets {
 	background: $grey-light;
-	
+
 	&:after {
 		@include clearfix;
 		@include clearfix-after;
@@ -204,7 +215,7 @@
 #footer-widget-1 {
 	margin: 0 auto;
 	max-width: $size-main-width;
-	
+
 	.widget {
 		float: left;
 		margin: 0;
@@ -214,7 +225,7 @@
 		color: $color-text;
 		background: $grey-light;
 	}
-	
+
 	@media (max-width: 825px ) {
 		.widget {
 			float: none;
@@ -223,12 +234,12 @@
 			max-width: 500px;
 			width: 100%;
 		}
-	
+
 		.widget + .widget {
 			padding-top: 0
 		}
 	}
-	
+
 	@media ( max-width: 520px ) {
 		.widget {
 			padding-left: 20px;
